# eventkit-rs

./: CHANGELOG.md  Cargo.toml  EKCalender.md  Info.plist  LICENSE  README.md  build-universal.sh  ci-check.sh
.github/workflows/: changelog.yml  ci.yml  pr-desc.yml  release.yml
EKCalender/: EKCalendarType.md
src/: app.rs  imp.rs  lib.rs  location.rs  main.rs  mcp.rs
tests/: mcp_smoke.rs
