[package]
name = "eventkit-rs"
version = "0.4.2"
edition = "2024"
description = "A Rust library and CLI for managing macOS Calendar events and Reminders via EventKit"
license = "Apache-2.0"
repository = "https://github.com/weekendsuperhero-io/eventkit-rs"
documentation = "https://docs.rs/eventkit-rs"
homepage = "https://github.com/weekendsuperhero-io/eventkit-rs"
readme = "README.md"
keywords = ["apple", "calendar", "eventkit", "macos", "reminders"]
categories = ["api-bindings", "os::macos-apis"]
authors = ["WeekendSuperhero <hello@weekendsuperhero.io>"]
rust-version = "1.94"

[package.metadata.docs.rs]
targets = ["x86_64-apple-darwin", "aarch64-apple-darwin"]

[lib]
name = "eventkit"
path = "src/lib.rs"

[[bin]]
name = "eventkit"
path = "src/main.rs"

[dependencies]
# MCP server dependencies (optional, gated behind "mcp" feature)
anyhow = { workspace = true, optional = true }
block2 = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
objc2 = { workspace = true }
objc2-core-graphics = { workspace = true, features = ["CGColor"] }
objc2-core-location = { workspace = true, features = ["CLLocation", "CLLocationManager"], optional = true }
objc2-event-kit = { workspace = true, features = ["EKAlarm", "EKCalendar", "EKCalendarItem", "EKEvent", "EKEventStore", "EKObject", "EKParticipant", "EKRecurrenceDayOfWeek", "EKRecurrenceEnd", "EKRecurrenceRule", "EKReminder", "EKSource", "EKStructuredLocation", "EKTypes", "block2", "objc2-core-graphics"] }
objc2-foundation = { workspace = true, features = ["NSArray", "NSCalendar", "NSDate", "NSError", "NSPredicate", "NSString", "NSTimeZone", "NSURL", "NSValue"] }
rmcp = { workspace = true, features = ["macros", "server", "transport-async-rw", "transport-io"], optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"], optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = ["env-filter"], optional = true }

[dev-dependencies]
# For future tests

[features]
default = ["events", "location", "mcp", "reminders"]
events = []
location = ["dep:objc2-core-location"]
mcp = [
  "dep:anyhow",
  "dep:rmcp",
  "dep:serde",
  "dep:serde_json",
  "dep:tokio",
  "dep:tracing",
  "dep:tracing-subscriber"
]
reminders = []
