[package]
name = "eventkit-rs"
version = "0.4.2"
edition = "2024"
description = "A Rust library and CLI for managing macOS Calendar events and Reminders via EventKit"
license = "Apache-2.0"
repository = "https://github.com/weekendsuperhero-io/eventkit-rs"
documentation = "https://docs.rs/eventkit-rs"
homepage = "https://github.com/weekendsuperhero-io/eventkit-rs"
readme = "README.md"
keywords = ["apple", "calendar", "eventkit", "macos", "reminders"]
categories = ["api-bindings", "os::macos-apis"]
authors = ["WeekendSuperhero <hello@weekendsuperhero.io>"]
rust-version = "1.94"

[package.metadata.docs.rs]
targets = ["x86_64-apple-darwin", "aarch64-apple-darwin"]

[lib]
name = "eventkit"
path = "src/lib.rs"

[[bin]]
name = "eventkit"
path = "src/main.rs"

[dependencies]
# MCP server dependencies (optional, gated behind "mcp" feature)
anyhow = { version = "1", optional = true }
block2 = "0.6"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
objc2 = "0.6"
objc2-core-graphics = { version = "0.3", features = ["CGColor"] }
objc2-core-location = { version = "0.3", features = ["CLLocation", "CLLocationManager"], optional = true }
objc2-event-kit = { version = "0.3", features = ["EKAlarm", "EKCalendar", "EKCalendarItem", "EKEvent", "EKEventStore", "EKObject", "EKParticipant", "EKRecurrenceDayOfWeek", "EKRecurrenceEnd", "EKRecurrenceRule", "EKReminder", "EKSource", "EKStructuredLocation", "EKTypes", "block2", "objc2-core-graphics"] }
objc2-foundation = { version = "0.3", features = ["NSArray", "NSCalendar", "NSDate", "NSError", "NSPredicate", "NSString", "NSTimeZone", "NSURL", "NSValue"] }
rmcp = { version = "1.2", features = ["macros", "server", "transport-async-rw", "transport-io"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
thiserror = "2"
tokio = { version = "1.50", features = ["full"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

[dev-dependencies]
# For future tests

[features]
default = ["events", "location", "mcp", "reminders"]
events = []
location = ["dep:objc2-core-location"]
mcp = [
  "dep:anyhow",
  "dep:rmcp",
  "dep:serde",
  "dep:serde_json",
  "dep:tokio",
  "dep:tracing",
  "dep:tracing-subscriber"
]
reminders = []
