[workspace]

[package]
name = "eventkit-rs"
version = "0.5.2"
edition = "2024"
description = "A Rust library and CLI for managing macOS Calendar events and Reminders via EventKit"
documentation = "https://docs.rs/eventkit-rs"
readme = "README.md"
homepage = "https://github.com/weekendsuperhero-io/eventkit-rs"
repository = "https://github.com/weekendsuperhero-io/eventkit-rs"
license = "Apache-2.0"
keywords = ["apple", "calendar", "eventkit", "macos", "reminders"]
categories = ["api-bindings", "os::macos-apis"]

rust-version = "1.94"

[package.metadata.docs.rs]
targets = ["x86_64-apple-darwin", "aarch64-apple-darwin"]

[lib]
name = "eventkit"
path = "src/lib.rs"

[[bin]]
name = "eventkit"
path = "src/main.rs"

[dependencies]
# Cross-platform dependencies
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"

# Optional cross-platform dependencies (gated behind features)
anyhow = { version = "1", optional = true }
rmcp = { version = "1.3", features = [
  "macros",
  "server",
  "transport-async-rw",
  "transport-io"
], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
tokio = { version = "1.51", features = ["full"], optional = true }
tracing = { version = "0.1", optional = true, features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# macOS-only dependencies (EventKit/objc2 bindings)
[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
objc2 = "0.6"
objc2-core-graphics = { version = "0.3", features = ["CGColor"] }
objc2-core-location = { version = "0.3", features = [
  "CLLocation",
  "CLLocationManager"
], optional = true }
objc2-event-kit = { version = "0.3", features = [
  "EKAlarm",
  "EKCalendar",
  "EKCalendarItem",
  "EKEvent",
  "EKEventStore",
  "EKObject",
  "EKParticipant",
  "EKRecurrenceDayOfWeek",
  "EKRecurrenceEnd",
  "EKRecurrenceRule",
  "EKReminder",
  "EKSource",
  "EKStructuredLocation",
  "EKTypes",
  "block2",
  "objc2-core-graphics"
] }
objc2-foundation = { version = "0.3", features = [
  "NSArray",
  "NSCalendar",
  "NSDate",
  "NSError",
  "NSPredicate",
  "NSString",
  "NSTimeZone",
  "NSURL",
  "NSValue"
] }

[dev-dependencies]
# For future tests

[features]
default = ["events", "location", "mcp", "reminders"]
events = []
location = ["dep:objc2-core-location"]
mcp = [
  "dep:anyhow",
  "dep:rmcp",
  "dep:serde",
  "dep:serde_json",
  "dep:tokio",
  "dep:tracing",
  "dep:tracing-subscriber"
]
reminders = []
